summer-jaeb/tests/compile_fail/missing_return_type.stderr
error: #[event_listener] function must have an explicit return type (-> HandlerResult)
  --> tests/compile_fail/missing_return_type.rs:10:1
   |
10 | async fn on_event(event: &MyEvent) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
